# math

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Cppkg.toml  Doxyfile  README.md  _a_a_b_b3_8hpp_source.html  _assert_8hpp_source.html  _easing_8hpp_source.html  _hash_combine_8hpp_source.html  _helper_8hpp_source.html  _math_8hpp_source.html  _matrix_8hpp_source.html  _matrix_n_n_8hpp_source.html  _quaternion_8hpp_source.html  _s_i_m_d_8hpp_source.html  _transform_8hpp_source.html  _vector2_8hpp_source.html  _vector3_8hpp_source.html  _vector4_8hpp_source.html  _vector_8hpp_source.html  aabb3_8hpp_source.html  aabb_8hpp_source.html  annotated.html  annotated_dup.js  assert_8hpp_source.html  check_8hpp_source.html  class_a_a_b_b-members.html  class_a_a_b_b.html  class_a_a_b_b.js  class_a_a_b_b3-members.html  class_a_a_b_b3.html  class_a_a_b_b3.js  class_easing-members.html  class_easing.html  class_math-members.html  class_math.html  class_matrix_t-members.html  (+72 more)
.github/: codeql-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: CMake.yml  cmake.yml  codeql-analysis.yml  codeql.yml  commitlint.yml  doxygen.yml  permake.yml  review.yml  test.yml
docs/: Doxyfile  _a_a_b_b3_8hpp_source.html  _helper_8hpp_source.html  _math_8hpp_source.html  _matrix_8hpp_source.html  _quaternion_8hpp_source.html  _vector2_8hpp_source.html  _vector3_8hpp_source.html  _vector4_8hpp_source.html  _vector_8hpp_source.html  annotated.html  class_a_a_b_b3-members.html  class_a_a_b_b3.html  class_matrix_t-members.html  class_matrix_t.html  class_matrix_t.js  class_quaternion_t-members.html  class_quaternion_t.html  class_vector_t-members.html  class_vector_t.html  class_vector_t.js  class_vector_t_3_01_t_00_012_01_4-members.html  class_vector_t_3_01_t_00_012_01_4.html  class_vector_t_3_01_t_00_012_01_4.js  class_vector_t_3_01_t_00_013_01_4-members.html  class_vector_t_3_01_t_00_013_01_4.html  class_vector_t_3_01_t_00_014_01_4-members.html  class_vector_t_3_01_t_00_014_01_4.html  classes.html  dir_6169d17290d9404be5262c21e04fa2c7.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  index.html  menudata.js
docs/search/: all_1.js  all_3.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  functions_4.js  functions_7.js  functions_c.js  functions_e.js  pages_0.js
include/: Math.h  Math.hpp  Matrix.hpp  Matrix.inl  Quaternion.hpp  Quaternion.inl  Vector.hpp  Vector.inl  Vector2.h  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl
include/Math/: AABB3.hpp  AABB3.inl  Assert.hpp  Easing.hpp  HashCombine.hpp  Helper.hpp  Math.hpp  Matrix.hpp  Matrix.inl  Quaternion.hpp  Quaternion.inl  SIMD.hpp  Transform.hpp  Transform.inl  Vector.hpp  Vector.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl  premake5.lua
include/Math/Matrix/: Matrix.hpp  Matrix.inl  MatrixNN.hpp  MatrixNN.inl
include/Math/Vector/: Vector.hpp  Vector.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl
include/math/: aabb3.hpp  aabb3.inl  assert.hpp  check.hpp  easing.hpp  hash_combine.hpp  helper.hpp  math.hpp  quaternion.hpp  quaternion.inl  simd.hpp  transform.hpp  transform.inl
include/math/matrix/: matrix.hpp  matrix.inl  matrix_nn.hpp
include/math/vector/: vector.hpp  vector.inl  vector2.hpp  vector2.inl  vector3.hpp  vector3.inl  vector4.hpp  vector4.inl
scripts/: build.bat  build.sh  cmake_build.sh  gen_gmake2.bat  gen_gmake2.sh  gen_vs2019.bat  gen_vs2022.bat  gen_xcode4.sh  generate_gmake2_project.bat  generate_gmake2_project.sh  generate_vs2019_project.bat  generate_xcode4_project.sh
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+4 more)
src/math/: aabb.hpp  aabb3.hpp  check.hpp  easing.hpp  hash_combine.hpp  helper.hpp  math.hpp  matrix.hpp  premake5.lua  quaternion.hpp  simd.hpp  transform.hpp  vector.hpp
src/math/matrix/: matrix.hpp  matrix.inl  matrix_nn.hpp  matrix_nn.inl
src/math/vector/: vector.hpp  vector2.hpp  vector2.inl  vector3.hpp  vector3.inl  vector4.hpp  vector4.inl
tests/: AABB.cpp  CMakeLists.txt  Helper.cpp  Helper_.cpp  Matrix.cpp  Quaternion.cpp  SIMD.cpp  Transform.cpp  Vector.cpp  VectorN.cpp  aabb.cpp  benchmark.cpp  helper.cpp  main.cpp  math.cpp  matrix.cpp  premake5.lua  quaternion.cpp  simd.cpp  transform.cpp  vector.cpp  vector_n.cpp
